# athena

./: .gitignore  MEMORY_ARCHITECTURE_SPEC.md  README.md
apps/tray/src-tauri/: Cargo.toml  tauri.conf.json
backend/adk-bidi/: .dockerignore  Dockerfile  deploy.sh  pyproject.toml  start.sh  test_memory.py  test_ws.py
backend/adk-bidi/app/: .env.example  context_builder.py  dependencies.py  gog_client.py  hydration_scheduler.py  hydration_types.py  job_workspace.py  lifecycle.py  main.py  memory_service.py  reflection_agent.py  resource_store.py  session_manager.py  slides_agent_client.py  tap_agent.py  tracing.py  ws.py  ws_downstream.py  ws_logic.py  ws_session.py  ws_upstream.py
backend/adk-bidi/tests/: test_agent_instruction.py  test_calendar_hydrator.py  test_context_builder_live_context.py  test_conversation_orchestrator.py  test_conversation_orchestrator_contracts.py  test_doc_hydrator.py  test_drive_hydrator.py  test_execution_engine.py  test_gmail_hydrator.py  test_gog_backend.py  test_gog_client.py  test_guarded_creation_tools.py  test_hydration_scheduler.py  test_job_store.py  test_job_workspace.py  test_live_voice_tools.py  test_main_routes.py  test_memory_service.py  test_orchestrator_response_spokes.py  test_orchestrator_tracing_plugin.py  test_planner_agent.py  test_reflection_agent.py  test_resource_store.py  test_result_broker.py  test_result_injector.py  test_session_manager.py  test_sheets_hydrator.py  test_slides_agent_backend.py  test_slides_agent_client.py  test_slides_hydrator.py  test_slides_specialist.py  test_state_store.py  test_tracing.py  (+10 more)
(+75 files in other folders)
