[package]
name = "athena-tray"
version = "0.1.0"
description = "Athena menu bar coworker"
authors = ["Athena Team"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
base64 = "0.22"
http = "1"
cpal = "0.15"
futures-util = "0.3"
image = { version = "0.25", default-features = false, features = ["jpeg"] }
screenshots = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["tray-icon"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync"] }
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
